{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e06b78a4-5506-43a4-8ecf-dc9d91fd04f8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "48c548ad-db2e-477f-b14e-728543aaef1e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveModeChange",
                    "type": "Button",
                    "id": "b94aa5b8-8e8c-412e-8e77-e18d6b9f84cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "995ccf7f-dde8-43c1-81fc-7a1edc7f6ebd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "369af0d1-cfd5-4cc5-a25b-4308defb6877",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "4b7935fc-a00f-49cd-a226-31919cab7586",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "da5e4bd5-224b-43ec-bf1f-348567299095",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c302f1c0-a4d9-47b1-8d6e-0194041433f7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "236f80ce-1f4d-4370-873d-35d0c5c1f355",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3d22c642-f208-451a-92a6-79f6c5872e92",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4c04b6e-be6c-45dd-b4cb-0ab0f86fc602",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c607b2d4-b880-4fa8-97da-fa8f0f0229c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "46103a4c-0a7f-4906-86ca-678f2bd38c2d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "MoveModeChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "def7feca-7566-4ace-9e34-ef7f0c43ac4c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed83fae8-2b01-4af0-878c-c3550d535be5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f31e669f-caef-4d17-ae22-84e919886888",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7499969d-ecf3-422f-bf1a-eaf0c722e917",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a42b979-d948-4efe-be85-1c4f67c57c71",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Effect",
            "id": "38847fc3-7b9d-4270-8bde-5d28dc4c30e2",
            "actions": [
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "d3af7cde-e7e0-4aef-8af2-c09971bf1598",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df62b976-1ede-4a87-bcff-abda82faf8e2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "90c185c3-21a3-41cb-bcb9-cccb350982d3",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "12ab4aec-9f41-4b54-ba38-0550632a5bb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Wheel",
                    "type": "Value",
                    "id": "eeed8d86-0f00-4806-b1fe-7fd170654a9a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InvenOnOff",
                    "type": "Button",
                    "id": "548e188a-46ec-4f88-9a4d-6512938b30c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "714ff98d-f91c-465e-aff1-18799041f878",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2401c44a-1631-4287-884a-1a8ba8de45bc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dea19420-7550-44c5-88bc-e78523a00674",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb6a1981-c594-4c76-b2ad-498a1ac58559",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Wheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "547af1c3-848c-427c-aab0-c378c9e59563",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "InvenOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}